NLA strip blend in line renders incorrectly after scaling strip #101369

Closed
opened 2022-09-26 00:34:29 +02:00 by Colin Basnett · 7 comments
Member

System Information
Operating system: Windows 11
Graphics card: NVIDIA RTX 3060 Ti

Blender Version
Broken: 3.3.0
Worked: Unknown

Short description of error
If an NLA strip has a blend-in time and the strip is scaled down, the blend-in line will be drawn outside the bounds of the strip.

Exact steps for others to reproduce the error

  1. Make an NLA strip of 10 frames in length.
  2. Set the blend-in time to 10 frames.
  3. Scale the strip down to 5 frames and observe the line.
    #101369.blend
    blendinbug.mp4
**System Information** Operating system: Windows 11 Graphics card: NVIDIA RTX 3060 Ti **Blender Version** Broken: 3.3.0 Worked: Unknown **Short description of error** If an NLA strip has a blend-in time and the strip is scaled down, the blend-in line will be drawn outside the bounds of the strip. **Exact steps for others to reproduce the error** 1. Make an NLA strip of 10 frames in length. 2. Set the blend-in time to 10 frames. 3. Scale the strip down to 5 frames and observe the line. [#101369.blend](https://archive.blender.org/developer/F13573415/T101369.blend) [blendinbug.mp4](https://archive.blender.org/developer/F13572914/blendinbug.mp4)
Author
Member

Added subscriber: @cmbasnett

Added subscriber: @cmbasnett
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @BClark

Added subscriber: @BClark
Nate Rupsis self-assigned this 2022-11-07 17:28:06 +01:00

This issue was referenced by fa67b84c34

This issue was referenced by fa67b84c348b36fdc25da11c428738e9f1f8a860
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member
Fixed by https://developer.blender.org/D16720
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101369
No description provided.